--- a/flashcard-style.css
+++ b/flashcard-style.css
@@ -1,3 +1,21 @@
 /*
 TODO(you): Write any additional styles you need here.
 */
+
+@keyframes myAnimationFromTo {
+    0% {
+        transform: scaleY(0);
+        transform-origin: bottom;
+    }
+
+    100% {
+        transform: scaleY(1);
+        transform-origin: bottom;
+    }
+}
+
+.flashcard-box .word {
+    animation: myAnimationFromTo;
+    /* animation-delay: 1s; */
+    animation-duration: 0.5s;
+}
